encabezado talento humano

--- a/src/main/resources/templates/passform.html
+++ b/src/main/resources/templates/passform.html
@@ -33,7 +33,7 @@
                 <div class="col-md-6">
                     <div class="row text-center">
                         <h2 class="hmod">Ministerio de Justicia y Seguridad Publica
-                            <br>Direccion de Recursos Humanos
+                            <br>Direccion de Desarrollo del Talento Humano
                             <br>SISADMRH</h2>
                     </div>
                 </div>
