--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -24,7 +24,7 @@
             <div class="col_cen">
                 <div class="text-center">
                     <h2 class="h2mod">Ministerio de Justicia y Seguridad Pública <br>
-                        Dirección de Recursos Humanos<br>
+                        Direccion de Desarrollo del Talento Humano<br>
                         SISADMRH</h2>
                 </div>
             </div>
