--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitador.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitador.jrxml
@@ -139,11 +139,11 @@ FROM
 				<text><![CDATA[Ministerio de Justicia y Seguridad Pública]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="185" y="23" width="200" height="20" uuid="27d32f01-d373-4d81-a466-e3559a7c7c8e"/>
+				<reportElement x="192" y="23" width="200" height="20" uuid="27d32f01-d373-4d81-a466-e3559a7c7c8e"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Dirección de Recursos Humanos]]></text>
+				<text><![CDATA[Direccion de Desarrollo del Talento Humano]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="227" y="37" width="100" height="20" uuid="0c2e2a83-13a7-4cde-935e-90d88beab7a6"/>
