volviendo a quitar del encabezad la onda DE TALENTO HUMANO

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -31,7 +31,7 @@
             <div class="col-md-6">
                 <div class="row text-center">
                     <h2 class="hmod">Ministerio de Justicia y Seguridad Pública
-                        <br>Direccion de Desarrollo del Talento Humano
+                        <br>Dirección de Recursos Humanos
                         <br>SISADMRH</h2>
                     </div>
                 </div>
