--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_puestos.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_puestos.jrxml
@@ -39,7 +39,7 @@
      DATE_FORMAT(puesto.`FECHACREACION`, "%d/ %m /%Y") AS puesto_FECHACREACION,
      puesto.`ESTADOPUESTO` AS puesto_ESTADOPUESTO
 FROM
-     `puesto` puesto where puesto.fechacontratacionhasta>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and puesto.fechacontratacionhasta<=STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
+     `puesto` puesto where puesto.fechacontratacionhasta>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and puesto.fechacontratacionhasta<=STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y') ]]>
 	</queryString>
 	<field name="puesto_CODIGOPUESTO" class="java.lang.Integer"/>
 	<field name="puesto_CATEGORIAPUESTO" class="java.lang.String"/>
@@ -100,7 +100,7 @@ FROM
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Direccion de Desarrollo del Talento Humano]]></text>
+				<text><![CDATA[Dirección de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="45" y="73" width="114" height="20" uuid="788b00d6-16f2-4348-b3d3-4e42268c96ec"/>
