--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_exonerado.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_exonerado.jrxml
@@ -39,7 +39,7 @@ and c.fechapresentaciondesde <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Direccion de Desarrollo del Talento Humano]]></text>
+				<text><![CDATA[Dirección de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="48" y="72" width="114" height="20" uuid="f65ed748-3a02-4fc8-8f65-27323ad3873c"/>
