Quitando coma a evaluacion de cap,mejorando la fecha y hora de diagnostico y hijos con capacidades especiales. reporteria todo bergon

--- a/src/main/resources/static/css/Style1.css
+++ b/src/main/resources/static/css/Style1.css
@@ -133,3 +133,12 @@
 .dataTables_wrapper{
     max-width: 950px !important;
 }
+
+.form-group .required .control-label:after {
+  content:"*";color:red;
+}
+/*//funcion para que salga requerido con asterisco en rojo*/
+.form-group.required .control-label:after {
+  content:"*";
+  color:red;
+}
