--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
@@ -125,7 +125,7 @@
                                     <input name="_features" type="hidden" value="on" />
                                     <label for="features8">AGO</label>
 
-                                    <input id="features9" name="mescapacitacion" type="checkbox" value="Setbiembre"  />
+                                    <input id="features9" name="mescapacitacion" type="checkbox" value="Septiembre"  />
                                     <input name="_features" type="hidden" value="on" />
                                     <label for="features9">SEP</label>
 
