--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -34,7 +34,7 @@
                         <div class="col-sm-5">
                                                     <!--<input type="number" class="form-control" th:field="*{codigocapacitador.codigocapacitador}"/>-->
 
-                            <select class="form-control" th:field="*{codigocapacitador.codigocapacitador}" >
+                            <select class="form-control " th:field="*{codigocapacitador.codigocapacitador}" >
                                    <option value="-1">-- Seleccione el capacitador --</option>
                                 <option th:each="c:${capacitadores}" th:value="${c.codigocapacitador}" th:text="${c.nombrecapacitador}"></option>
                             </select>
@@ -45,7 +45,7 @@
                         <span class="popuptext" id="capacitador">Seleccione El Capacitador. Solo se permiten  50 Caracteres!</span>
                     </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group required">
                         <label class="col-sm-2 control-label">Nombre de capacitación(*):</label>
                         <div class="col-sm-5">
                             <input type="text" size="50" maxlength="50"  class="form-control" required="true" th:field="*{nombrecapacitacion}"/>
