--- a/src/main/resources/templates/fragments/empleado/empleadoshow.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshow.html
@@ -501,6 +501,68 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                                             </div> 
                                         </div>
                                     </div>
+                                                                        <!--Contrato-->
+									<div class="card panel panel-default">
+                                    <div class="card-header">
+                                        <a class="collapsed card-link btn btn-outline-primary  btn-lg" data-toggle="collapse" data-parent="#card-758749" href="#card-element-734533"> <img src="../../static/image/images.jpeg"  th:src="@{/image/certificado.png}"/>Contrato</a>
+                                    </div>
+                                    <div id="card-element-734533" class="collapse">
+                                        <div class="card-body"> 
+                                           		<div class="panel panel-primary">
+														<div class="panel-heading">
+															<h3 class="panel-title"> 
+																Contrato 
+																<a th:href="@{|../../contratos/new/${empleado.codigoempleado}|}"title="" class="btn-sm btn-success pull-right">
+																	<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-plus">Crear</span> 
+																</a>
+															</h3>
+														</div>
+														<div class="panel-body">
+														 <div class="row text-center">
+															<img src="../../static/image/images.jpeg" width="100" th:src="@{/image/contrato.jpg}"/>
+														</div>
+															<!--<div th:if="${not #lists.isEmpty(contactos)}" >-->
+															<div class="row">
+
+															<div class="col-md-12">
+
+															<!--</div>-->
+															<h3 align="center">Listado de contratos</h3>
+															<table id="tablita6" class="table table-striped table-bordered" >
+															<thead>
+															<tr >
+															<th>Código</th>
+															<th>Fecha de inicio de contrato</th>
+                                                                                                                        <th>Fecha de fin de contrato</th>
+															<th>Salario Actual</th>
+															<th></th>
+															<th></th>
+															<th></th>
+                                                                                                                        <th></th>
+															</tr>
+															</thead>
+															<tr th:each="contrato : ${contratos}">
+															<td th:text="${contrato.codigocontrato}">codigocontrato</td>
+															<td th:text="${#calendars.format(contrato.fechainiciocontrato, 'dd/MM/yyyy')}	">fechainiciocontrato</td>
+															<td th:text="${#calendars.format(contrato.fechafincontrato, 'dd/MM/yyyy')}	">fechafincontrato</td>   
+															<td th:text="${#numbers.formatDecimal(contrato.salarioactual, 0, 'COMMA', 2, 'POINT')}">salarioactual</td>  
+                                                                                                                         <td><a  class="btn btn-danger" th:onclick="'descargapdfc(\'' + ${contrato.codigocontrato} + '\');'" >Descargar acuerdo</a></td>
+															<td><a th:href="${'../../contratos/show/' + contrato.codigocontrato}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
+															<td><a th:href="${'../../contratos/edit/' + contrato.codigocontrato}+'/'+${empleado.codigoempleado}" class="btn btn-success">Editar</a></td>
+															<!--<td><a th:href="${'../../contratos/delete/' + contrato.codigocontrato}" class="btn btn-danger">Eliminar</a></td>-->
+															<td><a th:onclick="'eliminar(\'' + ${'../../contratos/delete/' + contrato.codigocontrato}+'/'+${empleado.codigoempleado}+'\');'" class="btn btn-danger">Eliminar</a></td>
+															</tr>
+															</table>
+															</div>
+															<!--</div>-->   
+														</div>
+													</div>       
+                                              
+                                                    
+                                                </div>
+                                            </div> 
+                                        </div>
+                                    </div>
 									<!--Experiencia Laboral-->
 									<div class="card panel panel-default">
                                     <div class="card-header">
@@ -625,79 +687,18 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                                             </div> 
                                         </div>
                                     </div>
-									<!--Contrato-->
-									<div class="card panel panel-default">
-                                    <div class="card-header">
-                                        <a class="collapsed card-link btn btn-outline-primary  btn-lg" data-toggle="collapse" data-parent="#card-758749" href="#card-element-734533"> <img src="../../static/image/images.jpeg"  th:src="@{/image/certificado.png}"/>Contrato</a>
-                                    </div>
-                                    <div id="card-element-734533" class="collapse">
-                                        <div class="card-body"> 
-                                           		<div class="panel panel-primary">
-														<div class="panel-heading">
-															<h3 class="panel-title"> 
-																Contrato 
-																<a th:href="@{|../../contratos/new/${empleado.codigoempleado}|}"title="" class="btn-sm btn-success pull-right">
-																	<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-plus">Crear</span> 
-																</a>
-															</h3>
-														</div>
-														<div class="panel-body">
-														 <div class="row text-center">
-															<img src="../../static/image/images.jpeg" width="100" th:src="@{/image/contrato.jpg}"/>
-														</div>
-															<!--<div th:if="${not #lists.isEmpty(contactos)}" >-->
-															<div class="row">
-
-															<div class="col-md-12">
-
-															<!--</div>-->
-															<h3 align="center">Listado de contratos</h3>
-															<table id="tablita6" class="table table-striped table-bordered" >
-															<thead>
-															<tr >
-															<th>Código</th>
-															<th>Fecha de inicio de contrato</th>
-                                                                                                                        <th>Fecha de fin de contrato</th>
-															<th>Salario Actual</th>
-															<th></th>
-															<th></th>
-															<th></th>
-                                                                                                                        <th></th>
-															</tr>
-															</thead>
-															<tr th:each="contrato : ${contratos}">
-															<td th:text="${contrato.codigocontrato}">codigocontrato</td>
-															<td th:text="${#calendars.format(contrato.fechainiciocontrato, 'dd/MM/yyyy')}	">fechainiciocontrato</td>
-															<td th:text="${#calendars.format(contrato.fechafincontrato, 'dd/MM/yyyy')}	">fechafincontrato</td>   
-															<td th:text="${#numbers.formatDecimal(contrato.salarioactual, 0, 'COMMA', 2, 'POINT')}">salarioactual</td>  
-                                                                                                                         <td><a  class="btn btn-danger" th:onclick="'descargapdfc(\'' + ${contrato.codigocontrato} + '\');'" >Descargar acuerdo</a></td>
-															<td><a th:href="${'../../contratos/show/' + contrato.codigocontrato}+'/'+${empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
-															<td><a th:href="${'../../contratos/edit/' + contrato.codigocontrato}+'/'+${empleado.codigoempleado}" class="btn btn-success">Editar</a></td>
-															<!--<td><a th:href="${'../../contratos/delete/' + contrato.codigocontrato}" class="btn btn-danger">Eliminar</a></td>-->
-															<td><a th:onclick="'eliminar(\'' + ${'../../contratos/delete/' + contrato.codigocontrato}+'/'+${empleado.codigoempleado}+'\');'" class="btn btn-danger">Eliminar</a></td>
-															</tr>
-															</table>
-															</div>
-															<!--</div>-->   
-														</div>
-													</div>       
-                                              
-                                                    
-                                                </div>
-                                            </div> 
-                                        </div>
-                                    </div>
+									
 									<!--Hijos con Discapacidad-->
 									<div class="card panel panel-default">
                                     <div class="card-header">
-                                        <a class="collapsed card-link btn btn-outline-primary  btn-lg" data-toggle="collapse" data-parent="#card-758749" href="#card-element-734534"><img src="../../static/image/images.jpeg"  th:src="@{/image/discapacitado.png}"/> Hijos con Discapacidad</a>
+                                        <a class="collapsed card-link btn btn-outline-primary  btn-lg" data-toggle="collapse" data-parent="#card-758749" href="#card-element-734534"><img src="../../static/image/images.jpeg"  th:src="@{/image/discapacitado.png}"/> Hijos con Capacidades Especiales</a>
                                     </div>
                                     <div id="card-element-734534" class="collapse">
                                         <div class="card-body"> 
                                            		<div class="panel panel-primary">
 														<div class="panel-heading">
 															<h3 class="panel-title"> 
-																Hijos con discapacidad 
+																Hijos con capacidades especiales
 																<a th:href="@{|../../hijodiscapacidades/new/${empleado.codigoempleado}|}" title="" class="btn-sm btn-success pull-right">
 																	<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-plus">Crear</span> 
 																</a>
@@ -713,7 +714,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Listado de hijos con discapacidad</h3>
+															<h3 align="center">Listado de hijos con capacidades especiales</h3>
 															<table id="tablita7" class="table table-striped table-bordered" >
 															<thead>
 															<tr >
