--- a/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
@@ -552,7 +552,7 @@
                                         <div class="card-body"> 
                                             <div class="panel panel-primary">
                                                 <div class="panel-heading">
-                                                    <h3 class="panel-title"> Hijos con discapacidades</h3>
+                                                    <h3 class="panel-title"> Hijos con capacidades especiales</h3>
                                                 </div>
                                                 <div class="panel-body">
                                                     <div class="row text-center">
@@ -560,7 +560,7 @@
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-md-12">
-                                                            <h3 align="center">Listado de Hijos con discapacidades</h3>
+                                                            <h3 align="center">Hijos con capacidades especiales</h3>
                                                             <table id="tablita7" class="tablita table table-striped table-bordered" >
                                                                 <thead>
                                                                     <tr>
