--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -4,6 +4,7 @@
         <div th:fragment="footer">
             <footer class="footer">
                 <div class="container" align="center">
+                    <h1
                     <span class="text-muted"> Derechos Reservados UES/FIA/EISI.</span>
                 </div>
             </footer>
@@ -15,5 +16,6 @@
     <script>
         pdffile_event();
         required_field_select();
+        label_obg();
     </script>
 </html>
