--- a/src/main/resources/templates/fragments/mision/misionform.html
+++ b/src/main/resources/templates/fragments/mision/misionform.html
@@ -282,7 +282,7 @@
                                         <button type="submit" class="btn btn-default">Agregar</button>
                                     </div>-->
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Boleto aeroe(*):</label>
+                        <label class="col-sm-3 control-label">Boleto aereo(*):</label>
                         <div class="col-sm-3">
                             <input type="text" class="form-control numeros" id="n11" required="true" size="20" maxlength="20" th:field="*{boleto}"/>
                         </div>
