--- a/src/main/resources/templates/fragments/rol/rolform.html
+++ b/src/main/resources/templates/fragments/rol/rolform.html
@@ -54,13 +54,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <input type="text" class="num_dui" />
                 </div>
             </div>-->
- </div>
+  <div class="col-md-12">
             <div class="row" align="center">
                                  <a href="#" th:href="@{/roles/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
                             <button type="submit" id="guardar" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                             <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
-            </div>
-            </div>
+            </div></div>
+            
 
         </form>
     </div>
