--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -6,6 +6,10 @@
         <link href="../static/css/Style1.css" th:href="@{/css/Style1.css}" rel="stylesheet" media="screen"/>
         <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+        
+        <!--libreria para validar formularios para que salgan en rojos los requeridos y ponga el asterisco-->
+        <script type="text/javascript" th:src="@{/js/validator.min.js}"></script>
+        
         <script type="text/javascript" th:src="@{/js/jquery-ui.js}"></script>
         <script type="text/javascript" th:src="@{/js/SweetAlert.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/jquery.dataTables.min.js}"></script>
