--- a/src/main/resources/static/css/Style1.css
+++ b/src/main/resources/static/css/Style1.css
@@ -134,11 +134,10 @@
     max-width: 950px !important;
 }
 
-.form-group .required .control-label:after {
+/*.form-group .required .control-label:after {
   content:"*";color:red;
-}
-/*//funcion para que salga requerido con asterisco en rojo*/
+}/funcion para que salga requerido con asterisco en rojo
 .form-group.required .control-label:after {
   content:"*";
   color:red;
-}
+}*/
