--- a/src/main/resources/templates/fragments/comision/comisionform.html
+++ b/src/main/resources/templates/fragments/comision/comisionform.html
@@ -93,11 +93,13 @@
                         <span class="popuptext" id="poppup2013">Seleccione el acuerdo de la mision el archivo debe ser en formato PDF.!</span>
                     </div>
                 </div>
+                <div class="col-md-12">
                 <div class="row" align="center">
                      <a href="#" th:href="@{/comisiones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
                     <button type="submit" id="guardar"   onclick="fecha_format();"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                     <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
                 </div>
+                     </div>
 <!--                <div class="row">
                     <button type="submit" class="btn btn-default">Agregar</button>
                 </div>-->
