--- a/src/main/resources/templates/fragments/usuariorol/usuariorolform.html
+++ b/src/main/resources/templates/fragments/usuariorol/usuariorolform.html
@@ -56,7 +56,9 @@
             </div>
         </div>
     </div>
-
+<div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>
 </body>
 <script>
     $(document).ready(function () {
