--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
@@ -18,9 +18,12 @@
         <div class="col-md-8">
             <!--<h3 align="center" >Crear Diagnostico</h3>-->
                   <div class="col-md-9">
-          <div class="row text-center">
-                        <img src="../../static/image/evaluacion.png" width="75" th:src="@{/image/evaluacion.png}"/>
-                         </div>
+          <div class="row ">
+              <div class="row text-center">
+                   <img src="../../static/image/evaluacion.png" width="75" th:src="@{/image/evaluacion.png}"/>
+                    </div>
+                       
+                         
             <div>
                 <br>
                 <form class="form-horizontal" th:object="${diagnosticocapacitacion}" th:action="@{../diagnosticocapacitacion}" method="post">
