--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -11,9 +11,12 @@
         </div> 
         <div class="col-md-8">
             <br>
-            <div class="row text-center">
-                <img src="../../static/image/asistencia.png" width="75" th:src="@{/image/asistencia.png}"/>
-                <div class="row text-center">
+            <div class="row">
+                 <div class="row text-center">
+                      <img src="../../static/image/asistencia.png" width="75" th:src="@{/image/asistencia.png}"/>
+                    </div>
+               
+                <div class="row ">
                     <br>
                     <form class="form-horizontal" id="formascap" th:object="${formasistenciacapacitancion}" th:action="@{../asistenciacapacitacion}" method="post">
                     <div class="form-group">
