--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -16,7 +16,7 @@
         </div> 
         <div class="col-md-8">
             <br>
-            <div class="row text-center">
+            <div class="row ">
                 <img src="../../static/image/roles.png" width="75" th:src="@{/image/roles.png}"/>
                 <!--<h3 align="center" >Crear Comite</h3>-->
                 <div>
