--- a/src/main/resources/templates/fragments/descuento/descuentoform.html
+++ b/src/main/resources/templates/fragments/descuento/descuentoform.html
@@ -82,6 +82,7 @@
                 </div>
             </div>
         </div>
+        </div> 
         <div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div> 
