--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
@@ -25,8 +25,10 @@
             <th:block th:include="../templates/menu"></th:block>
         </div> 
         <div class="col-md-8">
-            <div class="row text-center">
-                        <img src="../../static/image/evaluacion.png" width="75" th:src="@{/image/evaluacion.png}"/>
+            <div class="row">
+                  <div class="row text-center">
+                        <img src="../../static/image/beneficios.png" width="75" th:src="@{/image/beneficios.png}"/>
+                        </div>
 <!--            <h3 align="center">Registro de Incapacidades</h3>-->
             <div>
                 <br>
@@ -412,6 +414,7 @@
 
     </div>
 </div>
+        </div> 
 <div class="col-md-12">
     <th:block th:include="../templates/footer"></th:block>
 
