--- a/src/main/resources/templates/fragments/inasistencia/inasistenciaform.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciaform.html
@@ -20,8 +20,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <th:block th:include="../templates/menu"></th:block>
         </div> 
         <div class="col-md-8">
-            <div class="row text-center">
-                        <img src="../../static/image/asistencia.png" width="100" th:src="@{/image/asistencia.png}"/>
+            <div class="row ">
+                <div class="row text-center">
+                     <img src="../../static/image/asistencia.png" width="100" th:src="@{/image/asistencia.png}"/>
+                    </div>
+                       
         <!--<h2 align="center">Crear Inasistencia</h2>-->
         <div>
             <form class="form-horizontal" th:object="${inasistencia}" th:action="@{../inasistencia}"  method="post" enctype="multipart/form-data">
@@ -121,6 +124,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         </div>
     </div>
          </div>
+        </div> 
    <div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div>
