--- a/src/main/resources/templates/fragments/empleado/empleadoform.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoform.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        
+        <style type="text/css">
+            .boton{
+                width:30px;
+                height:30px;
+                background-color:#03800b;
+                margin: 5px;
+                padding:10px;
+                -webkit-border-radius: 50px;
+                -moz-border-radius: 50px;
+                border-radius: 50px;
+                font-size:11px;
+                line-height:32px;
+                text-transform: uppercase;
+                float:left;
+            }
+            .boton:hover{
+                opacity: 0.50;
+                -moz-opacity: .50;
+                filter:alpha (opacity=50);
+            }
+            .boton a{
+                color:#fff;
+                text-decoration:none;
+                padding:5px 5px 5px 0;
+            }
+        </style>
 
         <title>Crear empleado</title>
     <th:block th:include="../templates/header"></th:block>
@@ -133,7 +158,7 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Municipio de nacimiento del empleado(*):</label>
                 <div class="col-sm-4" id ="refresh-after-municipio">
-                    <select style="width:300px;" id="mun1" class="form-control" required="true" name="municipionacimiento" th:field="*{municipionacimiento}">
+                    <select style="width:300px;" id="mun1" class="form-control" name="municipionacimiento" th:field="*{municipionacimiento}">
                                 <option th:value="${municipionacimiento}" th:text="${municipionacimiento==null}?'--seleccione un municipio--':${municipionacimiento}"></option>
                                 <option th:each="e:${municipios}" th:value="${e.codigoestado}" th:text="${e.nombreestado}" th:selected="${e.codigoestado== municipionacimiento}"></option>
                             </select>
@@ -296,6 +321,7 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Grupo sanguineo del empleado(*):</label>
                         <div class="col-sm-5">
+                            <!--<input type="text" class="form-control"    th:field="*{gruposanquineo}" />-->
                             <select class="form-control" name="gruposanquineo" th:field="*{gruposanquineo}" >
                                 <!--th:field="*{departamentorecidencia}">-->
                                 <option value="">--seleccione el grupo sanguineo del empleado--</option>
@@ -353,6 +379,7 @@
                                 <option value="Banco Scotiabank">Banco Scotiabank</option>
                                 <option value="Banco Credomatic">Banco Credomatic</option>
                             </select>
+                            <!--<input type="text" class="form-control"   required="true" size="50" maxlength="50"  th:field="*{nombreinstiuciondepositar}"  />-->
                         </div>
                         <div class="popup "><b>
                                 <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup25')" onmouseout ="javascript:ocultarAyuda('poppup25')">a</a></b>
@@ -438,6 +465,7 @@
 
 
 </body>
+<!--<script src="../static/css/hydro/js/jquery.js"></script>-->
 <script>
 
     Textheader('pnt_cem1', document.title);
